<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: 48/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="placeholder">This is the place that we are going to add the actual text to be shown</string>
    <string name="correct_answer">correct</string>
    <string name="incorrect">incorrect</string>
    <string name="prev_button">previous</string>
    <string name="score_button">get score</string>
</resources>